@@ -1,3 +1,15 @@
+2009-07-03  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* coffcode.h (sec_to_styp_flags):  Partially revert (functional
+	changes only) earlier patch:-
+
+  2009-06-25  Kai Tietz  <kai.tietz@onevision.com>
+
+	  * coffcode.h (sec_to_styp_flags): Set discardable for .reloc and
+	  give .debug and .reloc data characteristics.
+	  (DOT_RELOC): New define for .reloc section string.
+	  (coff_write_object_contents): Use DOT_RELOC instead of string.
+
 2009-07-02  Tom Tromey  <tromey@redhat.com>
 
 	* aoutx.h (aout_get_external_symbols): Declare 'amt' locally.
